@@ -171,6 +171,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.cloudstack</groupId>
+            <artifactId>cloud-framework-db</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cloudstack</groupId>
             <artifactId>cloud-engine-storage-configdrive</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -223,7 +228,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>@{argLine} -Xmx2048m -XX:MaxPermSize=512m -Djava.security.egd=file:/dev/./urandom</argLine>
+                    <argLine>@{argLine} -Xmx2048m -XX:MaxMetaspaceSize=512m -Djava.security.egd=file:/dev/./urandom</argLine>
                     <excludes>
                         <exclude>%regex[.*[0-9]*To[0-9]*.*Test.*]</exclude>
                         <exclude>com/cloud/upgrade/AdvanceZone223To224UpgradeTest</exclude>
